--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": ">=18.19.0",
+    "npm": ">=9.0.0"
+  },
   "scripts": {
     "start": "nodemon --exec babel-node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,6 +20,7 @@
     "@babel/preset-env": "^7.28.3",
     "nodemon": "^3.1.10"
   },
+  
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
